--- a/import.html
+++ b/import.html
@@ -235,7 +235,7 @@
                 </div>
               </div>
             
-              <button class="btn btn-dark">Submit</button>
+              <button class="btn btn-outline-dark">Submit</button>
               <hr>
             </form>
           </div> 
