--- a/index.html
+++ b/index.html
@@ -208,10 +208,10 @@
           <div class="row gy-4 gy-lg-0 pb-xl-5 pt-4 g-5">
             <div class="col-12 col-lg-4">
               <article>
-                <div class="card border-0">
+                <div class=" border-0">
                   <figure class="card-img-top m-0 overflow-hidden bsb-overlay-hover">
                     <a href="photBlog.html">
-                      <img class="img-fluid bsb-scale bsb-hover-scale-up" loading="lazy" src="images/SalsaPromoWebRes141.jpg" alt="Business">
+                      <img class="img-fluid bsb-scale bsb-hover-scale-up" loading="lazy" src="images/squae.jpg" alt="Business">
                     </a>
                     <figcaption>
                       <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-eye text-white bsb-hover-fadeInLeft" viewBox="0 0 16 16">
@@ -224,39 +224,22 @@
                   <div class="card-body border bg-white p-4">
                     <div class="entry-header mb-3">
                       <ul class="entry-meta list-unstyled d-flex mb-2">
-                        <li>
-                          <a class="link-primary text-decoration-none" href="photBlog.html">Rental Service</a>
-                        </li>
-                      </ul>
                       <h2 class="card-title entry-title h4 mb-0">
-                        <a class="link-dark text-decoration-none" href="photBlog.html">Read About Our Photobooth</a>
+                        <a class="link-dark text-decoration-none text-uppercase" href="photBlog.html">Photobooth</a>
                       </h2>
                     </div>
                     <p class="card-text entry-summary text-secondary">
                       Picture this: Your event is in full swing, laughter fills the air, and memories are being made. But how can you capture these precio...                    </p>
-                  </div>
-                  <div class="card-footer border border-top-0 bg-white p-4">
-                    <ul class="entry-meta list-unstyled d-flex align-items-center m-0">
-                      <li>
-                        <a class="fs-7 link-secondary text-decoration-none d-flex align-items-center" href="#!">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" class="bi bi-calendar3" viewBox="0 0 16 16">
-                            <path d="M14 0H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zM1 3.857C1 3.384 1.448 3 2 3h12c.552 0 1 .384 1 .857v10.286c0 .473-.448.857-1 .857H2c-.552 0-1-.384-1-.857V3.857z" />
-                            <path d="M6.5 7a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2z" />
-                          </svg>
-                          <span class="ms-2 fs-7">7 Feb 2023</span>
-                        </a>
-                      </li>
-                    </ul>
                   </div>
                 </div>
               </article>
             </div>
             <div class="col-12 col-lg-4">
               <article>
-                <div class="card border-0">
+                <div class="border-0">
                   <figure class="card-img-top m-0 overflow-hidden bsb-overlay-hover">
                     <a href="importBlog.html">
-                      <img class="img-fluid bsb-scale bsb-hover-scale-up" loading="lazy" src="images/importexport.jpg" alt="Nutrition">
+                      <img class="img-fluid bsb-scale bsb-hover-scale-up" loading="lazy" src="images/square2.jpg" alt="Nutrition">
                     </a>
                     <figcaption>
                       <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-eye text-white bsb-hover-fadeInDown" viewBox="0 0 16 16">
@@ -268,41 +251,23 @@
                   </figure>
                   <div class="card-body border bg-white p-4">
                     <div class="entry-header mb-3">
-                      <ul class="entry-meta list-unstyled d-flex mb-2">
-                        <li>
-                          <a class="link-primary text-decoration-none" href="importBlog.html">Nutrition</a>
-                        </li>
-                      </ul>
                       <h2 class="card-title entry-title h4 mb-0">
-                        <a class="link-dark text-decoration-none" href="importBlog.html">Read Import/Export</a>
+                        <a class="link-dark text-decoration-none text-uppercase" href="importBlog.html">Import/Export</a>
                       </h2>
                     </div>
                     <p class="card-text entry-summary text-secondary">
                       The world of international trade is full of opportunities, but navigating the complexities of import and export can be chall...
                     </p>
                   </div>
-                  <div class="card-footer border border-top-0 bg-white p-4">
-                    <ul class="entry-meta list-unstyled d-flex align-items-center m-0">
-                      <li>
-                        <a class="fs-7 link-secondary text-decoration-none d-flex align-items-center" href="#!">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" class="bi bi-calendar3" viewBox="0 0 16 16">
-                            <path d="M14 0H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zM1 3.857C1 3.384 1.448 3 2 3h12c.552 0 1 .384 1 .857v10.286c0 .473-.448.857-1 .857H2c-.552 0-1-.384-1-.857V3.857z" />
-                            <path d="M6.5 7a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2z" />
-                          </svg>
-                          <span class="ms-2 fs-7">12 Aug 2023</span>
-                        </a>
-                      </li>
-                    </ul>
-                  </div>
                 </div>
               </article>
             </div>
             <div class="col-12 col-lg-4">
               <article>
-                <div class="card border-0">
+                <div class="border-0">
                   <figure class="card-img-top m-0 overflow-hidden bsb-overlay-hover">
                     <a href="eComBlog.html">
-                      <img class="img-fluid bsb-scale bsb-hover-scale-up" loading="lazy" src="images/shutter-speed-BQ9usyzHx_w-unsplash.jpg" alt="Business">
+                      <img class="img-fluid bsb-scale bsb-hover-scale-up" loading="lazy" src="images/square3.jpg" alt="Business">
                     </a>
                     <figcaption>
                       <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-eye text-white bsb-hover-fadeInLeft" viewBox="0 0 16 16">
@@ -314,30 +279,12 @@
                   </figure>
                   <div class="card-body border bg-white p-4">
                     <div class="entry-header mb-3">
-                      <ul class="entry-meta list-unstyled d-flex mb-2">
-                        <li>
-                          <a class="link-primary text-decoration-none" href="eComBlog.html">Rental Service</a>
-                        </li>
-                      </ul>
                       <h2 class="card-title entry-title h4 mb-0">
-                        <a class="link-dark text-decoration-none" href="eComBlog.html">Read our E-Com Store</a>
+                        <a class="link-dark text-decoration-none text-uppercase" href="eComBlog.html">E-Commerce Store</a>
                       </h2>
                     </div>
                     <p class="card-text entry-summary text-secondary">
                       Welcome to our online eCommerce store, your one-stop destination for high-quality products that bring convenience, style, and inno..                    </p>
-                  </div>
-                  <div class="card-footer border border-top-0 bg-white p-4">
-                    <ul class="entry-meta list-unstyled d-flex align-items-center m-0">
-                      <li>
-                        <a class="fs-7 link-secondary text-decoration-none d-flex align-items-center" href="#!">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" class="bi bi-calendar3" viewBox="0 0 16 16">
-                            <path d="M14 0H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zM1 3.857C1 3.384 1.448 3 2 3h12c.552 0 1 .384 1 .857v10.286c0 .473-.448.857-1 .857H2c-.552 0-1-.384-1-.857V3.857z" />
-                            <path d="M6.5 7a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2z" />
-                          </svg>
-                          <span class="ms-2 fs-7">7 Feb 2023</span>
-                        </a>
-                      </li>
-                    </ul>
                   </div>
                 </div>
               </article>
@@ -351,11 +298,10 @@
 
 <!-- reviews -->
 
-      <section class="bsb-cta-1 px-2 bsb-overlay" style="background-image: url('./images/2nd\ \(1\).jpg');">
+      <section class="bsb-cta-1 px-2 bsb-overlay mt-5" style="background-image: url('./images/2nd\ \(1\).jpg');">
         <div class="container">
           <div class="row justify-content-md-center">
             <div class="col-12 col-md-10 col-lg-8 col-xl-7 col-xxl-6">
-              <h2 class="fs-6 text-secondary mb-2 text-uppercase text-center">Happy Customers</h2>
               <p class="display-5 mb-4 mb-md-5 text-center">We deliver what we promise. See what clients are expressing about us.</p>
               <hr class="w-50 mx-auto mb-5 mb-xl-9 border-dark-subtle">
             </div>
@@ -363,8 +309,8 @@
         </div>
 
         <div class="container overflow-hidden">
-          <div class="row gy-4 gy-md-0 gx-xxl-5">
-            <div class="col-12 col-md-4">
+          <div class="row gy-4 gy-md-0 gx-xxl-5 justify-content-center">
+            <div class="col-11 col-md-4">
               <div class="card border-0 border-bottom border-primary shadow-sm bg-black text-white">
                 <div class="card-body p-4 p-xxl-5">
                   <figure>
@@ -379,7 +325,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-md-4">
+            <div class="col-11 col-md-4">
               <div class="card border-0 border-bottom border-primary shadow-sm bg-black text-white">
                 <div class="card-body p-4 p-xxl-5">
                   <figure>
@@ -394,7 +340,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-md-4">
+            <div class="col-11 col-md-4">
               <div class="card border-0 border-bottom border-primary shadow-sm bg-black text-white">
                 <div class="card-body p-4 p-xxl-5">
                   <figure>
@@ -418,9 +364,9 @@
 
 <!-- contact -->
       <div>
-        <div class="py-5 px-4 container" >
+        <div class="pt-5 px-4 container" >
           <h2 class="border-bottom pb-1" id="contact" >Contact</h2>
-          <p class="lead text-black">Got questions or need assistance? We’re here to help! Whether you’re interested in our services, have a collaboration idea, or just want to connect, feel free to reach out.</p>
+          <p class="lead text-black">Got questions or need assistance? We’re here to help!</p>
         </div>
         <section class="bg-white py-3 py-md-5" >
           <div class="container">
@@ -432,8 +378,8 @@
           <div class="container" >
             <div class="row justify-content-lg-center">
               <div class="bg-white">
-                <div class="bg-light  rounded shadow-sm overflow-hidden">
-                  <form action="#!">
+                <div class="bg-light  rounded shadow-lg overflow-hidden">
+                  <form action="https://formspree.io/f/xrbpazaw" method="POST">
                     <div class="row gy-4 gy-xl-5 p-4 p-xl-5">
                       <div class="col-12">
                         <label for="fullname" class="form-label">Full Name <span class="text-primary">*</span></label>
@@ -465,9 +411,9 @@
                         <label for="message" class="form-label">Message <span class="text-primary">*</span></label>
                         <textarea class="form-control" id="message" name="message" rows="3" required></textarea>
                       </div>
-                      <div class="col-12">
+                      <div class="col-4">
                         <div class="d-grid">
-                          <button class="btn btn-primary btn-lg" type="submit">Submit</button>
+                          <button class="btn btn-outline-dark" type="submit">Submit</button>
                         </div>
                       </div>
                     </div>
