FAQ and Plans comparison

--- a/autobooth.html
+++ b/autobooth.html
@@ -286,7 +286,7 @@
               </thead>
               <tbody>
                 <tr>
-                  <th scope="row" class="text-start">Unlimited Pictures</th>
+                  <th scope="row" class="text-start">Unlimited Print</th>
                   <td><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
                     <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/>
                   </svg></td>
@@ -298,7 +298,7 @@
                   </svg></td>
                 </tr>
                 <tr>
-                  <th scope="row" class="text-start">Video Capture</th>
+                  <th scope="row" class="text-start">Exclusive Add-Ons</th>
                   <td><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
                     <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/>
                   </svg></td>
@@ -313,7 +313,7 @@
       
               <tbody>
                 <tr>
-                  <th scope="row" class="text-start">Digital Print</th>
+                  <th scope="row" class="text-start">Digital Sharing</th>
                   <td><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
                     <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/>
                   </svg></td>
@@ -325,7 +325,7 @@
                   </svg></td>
                 </tr>
                 <tr>
-                  <th scope="row" class="text-start">Logo</th>
+                  <th scope="row" class="text-start">Filters & Frames</th>
                   <td><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
                     <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/>
                   </svg></td>
@@ -349,7 +349,7 @@
                   </svg></td>
                 </tr>
                 <tr>
-                  <th scope="row" class="text-start">Delivery</th>
+                  <th scope="row" class="text-start">Event Theme</th>
                   <td><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check" viewBox="0 0 16 16">
                     <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425z"/>
                   </svg></td>
@@ -382,62 +382,62 @@
             <div class="col-12 col-xl-10">
               <div class="accordion accordion-flush" id="faqAccount">
                 <div class="accordion-item bg-transparent border-bottom py-3">
+                  <h2 class="accordion-header" id="faqAccountHeading5">
+                    <button class="accordion-button collapsed bg-transparent fw-bold shadow-none link-black" type="button" data-bs-toggle="collapse" data-bs-target="#faqAccountCollapse5" aria-expanded="false" aria-controls="faqAccountCollapse5">
+                      What are the Exclusive Add-Ons in the Ultra Plan?
+                    </button>
+                  </h2>
+                  <div id="faqAccountCollapse5" class="accordion-collapse collapse" aria-labelledby="faqAccountHeading5">
+                    <div class="accordion-body">
+                      <p class="text-black">Green Screen Effects, AR Filters and Animations, Luxury Props, Custom Animated Frames, Personalized Event Branding, Express Delivery, and On-Site Support.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item bg-transparent border-bottom py-3">
                   <h2 class="accordion-header" id="faqAccountHeading1">
                     <button class="accordion-button collapsed bg-transparent fw-bold shadow-none link-black" type="button" data-bs-toggle="collapse" data-bs-target="#faqAccountCollapse1" aria-expanded="false" aria-controls="faqAccountCollapse1">
-                      What is an account?
+                    Can we get a digital copy of all the photos?
                     </button>
                   </h2>
                   <div id="faqAccountCollapse1" class="accordion-collapse collapse" aria-labelledby="faqAccountHeading1">
                     <div class="accordion-body">
-                      <p class="text-black">An account is a personal or organizational record that allows you to access and manage various services, often requiring authentication through a username and password.</p>
+                      <p class="text-black">Yes, digital copies are included in the Pro and Ultra plans via Mobile Number, Email, QR code, or cloud access.</p>
                     </div>
                   </div>
                 </div>
                 <div class="accordion-item bg-transparent border-bottom py-3">
                   <h2 class="accordion-header" id="faqAccountHeading2">
                     <button class="accordion-button collapsed bg-transparent fw-bold shadow-none link-black" type="button" data-bs-toggle="collapse" data-bs-target="#faqAccountCollapse2" aria-expanded="false" aria-controls="faqAccountCollapse2">
-                      How do I create an account?
+                      How far in advance do I need to book?
                     </button>
                   </h2>
                   <div id="faqAccountCollapse2" class="accordion-collapse collapse" aria-labelledby="faqAccountHeading2">
                     <div class="accordion-body">
-                      <p class="text-black">To create an account, visit the website or application and look for a "Sign Up" or "Create Account" button. Follow the instructions to enter your information and create a username and password.</p>
+                      <p class="text-black">We recommend booking at least 2–4 weeks in advance to secure your date.</p>
                     </div>
                   </div>
                 </div>
                 <div class="accordion-item bg-transparent border-bottom py-3">
                   <h2 class="accordion-header" id="faqAccountHeading3">
                     <button class="accordion-button collapsed bg-transparent fw-bold shadow-none link-black" type="button" data-bs-toggle="collapse" data-bs-target="#faqAccountCollapse3" aria-expanded="false" aria-controls="faqAccountCollapse3">
-                      How do I secure my account?
+                      Can I upgrade my plan after booking?
                     </button>
                   </h2>
                   <div id="faqAccountCollapse3" class="accordion-collapse collapse" aria-labelledby="faqAccountHeading3">
                     <div class="accordion-body">
-                      <p class="text-black">To secure your account, use a robust and unique password, enable two-factor authentication if available, and be cautious about sharing your login information. Regularly update your password and avoid using easily guessable information like birthdays or names.</p>
+                      <p class="text-black">Yes, you can upgrade to a higher plan, subject to availability. Additional charges will apply.</p>
                     </div>
                   </div>
                 </div>
                 <div class="accordion-item bg-transparent border-bottom py-3">
                   <h2 class="accordion-header" id="faqAccountHeading4">
                     <button class="accordion-button collapsed bg-transparent fw-bold shadow-none link-black" type="button" data-bs-toggle="collapse" data-bs-target="#faqAccountCollapse4" aria-expanded="false" aria-controls="faqAccountCollapse4">
-                      What should I do if I forget my password?
+                      Can the photobooth be set up outdoors?
                     </button>
                   </h2>
                   <div id="faqAccountCollapse4" class="accordion-collapse collapse" aria-labelledby="faqAccountHeading4">
                     <div class="accordion-body">
-                      <p class="text-black">If you forget your password, most websites and services offer a "Forgot Password" or "Reset Password" option. Follow the steps to reset your password, often involving an email or SMS verification.</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="accordion-item bg-transparent border-bottom py-3">
-                  <h2 class="accordion-header" id="faqAccountHeading5">
-                    <button class="accordion-button collapsed bg-transparent fw-bold shadow-none link-black" type="button" data-bs-toggle="collapse" data-bs-target="#faqAccountCollapse5" aria-expanded="false" aria-controls="faqAccountCollapse5">
-                      What should I do if my account is compromised or hacked?
-                    </button>
-                  </h2>
-                  <div id="faqAccountCollapse5" class="accordion-collapse collapse" aria-labelledby="faqAccountHeading5">
-                    <div class="accordion-body">
-                      <p class="text-black">If you suspect your account has been compromised, change your password immediately. Contact the service provider for further assistance, and consider enabling two-factor authentication for added security.</p>
+                      <p class="text-black">Yes, as long as there’s a shaded area and access to electricity. Weather conditions will be considered for outdoor setups.</p>
                     </div>
                   </div>
                 </div>
