--- a/index.html
+++ b/index.html
@@ -297,67 +297,130 @@
 
 
 <!-- reviews -->
-
-      <section class="bsb-cta-1 px-2 bsb-overlay mt-5" style="background-image: url('./images/2nd\ \(1\).jpg');">
-        <div class="container">
-          <div class="row justify-content-md-center">
-            <div class="col-12 col-md-10 col-lg-8 col-xl-7 col-xxl-6">
-              <p class="display-5 mb-4 mb-md-5 text-center">We deliver what we promise. See what clients are expressing about us.</p>
-              <hr class="w-50 mx-auto mb-5 mb-xl-9 border-dark-subtle">
-            </div>
-          </div>
-        </div>
-
-        <div class="container overflow-hidden">
-          <div class="row gy-4 gy-md-0 gx-xxl-5 justify-content-center">
-            <div class="col-11 col-md-4">
-              <div class="card border-0 border-bottom border-primary shadow-sm bg-black text-white">
-                <div class="card-body p-4 p-xxl-5">
-                  <figure>
-                    <img class="img-fluid rounded rounded mb-4" loading="lazy" src="./images/autobooth.jpg" alt="Luna John">
-                    <figcaption>
-                      <div class="bsb-ratings text-warning mb-3" data-bsb-star="5" data-bsb-star-off="0"></div>
-                      <blockquote class="bsb-blockquote-icon mb-4">We were so impressed with the work they did for us. They were able to take our vision and turn it into a reality, and they did it all on time and within budget. We would highly recommend them to anyone looking for a reliable partner.</blockquote>
-                      <h4 class="mb-2">Luna John</h4>
-                      <h5 class="fs-6 text-secondary mb-0">UX Designer</h5>
-                    </figcaption>
-                  </figure>
-                </div>
-              </div>
-            </div>
-            <div class="col-11 col-md-4">
-              <div class="card border-0 border-bottom border-primary shadow-sm bg-black text-white">
-                <div class="card-body p-4 p-xxl-5">
-                  <figure>
-                    <img class="img-fluid rounded rounded mb-4" loading="lazy" src="./images/autobooth.jpg" alt="Mark Smith">
-                    <figcaption>
-                      <div class="bsb-ratings text-warning mb-3" data-bsb-star="4" data-bsb-star-off="1"></div>
-                      <blockquote class="bsb-blockquote-icon mb-4">We were looking for a company that could help us develop a new website that was both visually appealing and user-friendly. We are so happy with the results, and we would highly recommend them to anyone looking for a new website.</blockquote>
-                      <h4 class="mb-2">Mark Smith</h4>
-                      <h5 class="fs-6 text-secondary mb-0">Marketing Specialist</h5>
-                    </figcaption>
-                  </figure>
-                </div>
-              </div>
-            </div>
-            <div class="col-11 col-md-4">
-              <div class="card border-0 border-bottom border-primary shadow-sm bg-black text-white">
-                <div class="card-body p-4 p-xxl-5">
-                  <figure>
-                    <img class="img-fluid rounded rounded mb-4" loading="lazy" src="./images/autobooth.jpg" alt="Luke Reeves">
-                    <figcaption>
-                      <div class="bsb-ratings text-warning mb-3" data-bsb-star="5" data-bsb-star-off="0"></div>
-                      <blockquote class="bsb-blockquote-icon mb-4">We were looking for a company that could help us with our branding. We needed a website and marketing materials. They were able to create a brand identity that we loved. They worked with us to develop a logo that represented our company.</blockquote>
-                      <h4 class="mb-2">Luke Reeves</h4>
-                      <h5 class="fs-6 text-secondary mb-0">Sales Manager</h5>
-                    </figcaption>
-                  </figure>
-                </div>
+<section class="bsb-cta-1 px-2 bsb-overlay mt-5" style="background-image: url('./images/2nd (1).jpg'); background-size: cover; background-position: center;">
+  <div class="container py-5">
+    <div class="row justify-content-md-center">
+      <div class="col-12 col-md-10 col-lg-8 col-xl-7 col-xxl-6">
+        <p class="display-5 mb-4 mb-md-5 text-center text-white">See what <strong>clients</strong> are expressing about us.</p>
+        <hr class="w-50 mx-auto mb-5 mb-xl-9 border-light">
+      </div>
+    </div>
+  </div>
+  <div id="testimonialsCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000" style="max-width: 90%; margin: 0 auto;">
+    <div class="carousel-inner">
+      <!-- Carousel Item 1 -->
+      <div class="carousel-item active">
+        <div class="row gy-4 gx-5 justify-content-center">
+          <div class="col-12 col-md-4">
+            <div class="border-0 shadow-sm bg-black text-white">
+              <div class="card-body p-4 p-xxl-5">
+                <figure>
+                  <img class="img-fluid rounded mb-4" loading="lazy" src="./images/autobooth.jpg" alt="Luna John">
+                  <figcaption>
+                    <div class="bsb-ratings text-warning mb-3" data-bsb-star="5"></div>
+                    <blockquote class="bsb-blockquote-icon mb-4">We were so impressed with the work they did for us. They were able to take our vision and turn it into a reality.</blockquote>
+                    <h4 class="mb-2">Luna John</h4>
+                    <h5 class="fs-6 text-secondary mb-0">UX Designer</h5>
+                  </figcaption>
+                </figure>
               </div>
             </div>
           </div>
+          <div class="col-md-4 d-none d-md-block">
+            <div class="border-0 shadow-sm bg-black text-white">
+              <div class="card-body p-4 p-xxl-5">
+                <figure>
+                  <img class="img-fluid rounded mb-4" loading="lazy" src="./images/autobooth.jpg" alt="Mark Smith">
+                  <figcaption>
+                    <div class="bsb-ratings text-warning mb-3" data-bsb-star="4"></div>
+                    <blockquote class="bsb-blockquote-icon mb-4">We are so happy with the results, and we would highly recommend them to anyone looking for a new website.</blockquote>
+                    <h4 class="mb-2">Mark Smith</h4>
+                    <h5 class="fs-6 text-secondary mb-0">Marketing Specialist</h5>
+                  </figcaption>
+                </figure>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 d-none d-md-block">
+            <div class="border-0 shadow-sm bg-black text-white">
+              <div class="card-body p-4 p-xxl-5">
+                <figure>
+                  <img class="img-fluid rounded mb-4" loading="lazy" src="./images/autobooth.jpg" alt="Luke Reeves">
+                  <figcaption>
+                    <div class="bsb-ratings text-warning mb-3" data-bsb-star="5"></div>
+                    <blockquote class="bsb-blockquote-icon mb-4">They created a brand identity we loved, working with us to develop a logo that represented our company.</blockquote>
+                    <h4 class="mb-2">Luke Reeves</h4>
+                    <h5 class="fs-6 text-secondary mb-0">Sales Manager</h5>
+                  </figcaption>
+                </figure>
+              </div>
+            </div>
+          </div>
         </div>
-      </section>
+      </div>
+      <!-- item 2 -->
+      <div class="carousel-item active">
+        <div class="row gy-4 gx-5 justify-content-center">
+          <div class="col-12 col-md-4">
+            <div class="border-0 shadow-sm bg-black text-white">
+              <div class="card-body p-4 p-xxl-5">
+                <figure>
+                  <img class="img-fluid rounded mb-4" loading="lazy" src="./images/autobooth.jpg" alt="Luna John">
+                  <figcaption>
+                    <div class="bsb-ratings text-warning mb-3" data-bsb-star="5"></div>
+                    <blockquote class="bsb-blockquote-icon mb-4">We were so impressed with the work they did for us. They were able to take our vision and turn it into a reality.</blockquote>
+                    <h4 class="mb-2">Luna John</h4>
+                    <h5 class="fs-6 text-secondary mb-0">UX Designer</h5>
+                  </figcaption>
+                </figure>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 d-none d-md-block">
+            <div class="border-0 shadow-sm bg-black text-white">
+              <div class="card-body p-4 p-xxl-5">
+                <figure>
+                  <img class="img-fluid rounded mb-4" loading="lazy" src="./images/autobooth.jpg" alt="Mark Smith">
+                  <figcaption>
+                    <div class="bsb-ratings text-warning mb-3" data-bsb-star="4"></div>
+                    <blockquote class="bsb-blockquote-icon mb-4">We are so happy with the results, and we would highly recommend them to anyone looking for a new website.</blockquote>
+                    <h4 class="mb-2">Mark Smith</h4>
+                    <h5 class="fs-6 text-secondary mb-0">Marketing Specialist</h5>
+                  </figcaption>
+                </figure>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 d-none d-md-block">
+            <div class="border-0 shadow-sm bg-black text-white">
+              <div class="card-body p-4 p-xxl-5">
+                <figure>
+                  <img class="img-fluid rounded mb-4" loading="lazy" src="./images/autobooth.jpg" alt="Luke Reeves">
+                  <figcaption>
+                    <div class="bsb-ratings text-warning mb-3" data-bsb-star="5"></div>
+                    <blockquote class="bsb-blockquote-icon mb-4">They created a brand identity we loved, working with us to develop a logo that represented our company.</blockquote>
+                    <h4 class="mb-2">Luke Reeves</h4>
+                    <h5 class="fs-6 text-secondary mb-0">Sales Manager</h5>
+                  </figcaption>
+                </figure>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Add more carousel items as needed -->
+    </div>
+    <!-- <button class="carousel-control-prev" type="button" data-bs-target="#testimonialsCarousel" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon bg-dark rounded-circle" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#testimonialsCarousel" data-bs-slide="next">
+      <span class="carousel-control-next-icon bg-dark rounded-circle" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button> -->
+  </div>
+</section>
+
 
 <!-- reviews -->
 
